[package]
name = "gasmask"
version = "0.1.0"
edition = "2021"
authors = ["maldevel", "mikismaos", "xvass", "ndamoulianos", "sbrb"]
description = "All in one Information gathering tool - OSINT"
license = "GPL-3.0"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
config = "0.14"
urlencoding = "2.1"
regex = "1.10"
base64 = "0.21"
chrono = "0.4"
colored = "2.1"
indicatif = "0.17"
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3"

# Additional dependencies for the new modules
whois = "0.8"
trust-dns-resolver = "0.23"
log = "0.4"
env_logger = "0.11"
html5ever = "0.26"
select = "0.6"
sha2 = "0.10"
hex = "0.4" 